--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-inviewport",
-  "version": "1.0.0",
-  "description": "Detect if view is in viewport",
+  "version": "1.1.0",
+  "description": "Detect if component is in device viewport",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
