--- a/package.json
+++ b/package.json
@@ -7,10 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
+    "react-component",
     "react-native",
     "ios",
     "android"
   ],
   "author": "Yamill Vallecillo <yamill@gmail.com> (http://github.com/yamill)",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yamill/react-native-inviewport.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yamill/react-native-inviewport/issues"
+  },
+  "homepage": "https://github.com/yamill/react-native-inviewport#readme"
 }
