--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-inviewport",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Detect if component is in device viewport",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/yamill/react-native-inviewport/issues"
   },
-  "homepage": "https://github.com/yamill/react-native-inviewport#readme"
+  "homepage": "https://github.com/yamill/react-native-inviewport#readme",
+  "dependencies": {
+    "react": "^16.2.0"
+  }
 }
