Added gitignore and .bablerc

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Detect if component is in device viewport",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
