--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/yamill/react-native-inviewport/issues"
   },
-  "homepage": "https://github.com/yamill/react-native-inviewport#readme"
+  "homepage": "https://github.com/yamill/react-native-inviewport#readme",
+  "dependencies": {
+    "prop-types": "^15.7.2"
+  }
 }
