--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   },
   "homepage": "https://github.com/yamill/react-native-inviewport#readme",
   "devDependencies": {
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "react": "^16",
+    "react-native": "^0.63"
+  },
+  "peerDependencies": {
+    "react": "^16",
+    "react-native": "^0.63"
   }
 }
