--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "react-native-inviewport",
-  "version": "1.1.1",
+  "version": "2",
   "description": "Detect if component is in device viewport",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build" : "tsc",
+    "prepare": "npm run build"
   },
   "keywords": [
     "react-component",
