--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-native-inviewport",
   "version": "2.0.0",
   "description": "Detect if component is in device viewport",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build" : "tsc",
